# pixel_aware_gyro_aided_klt_feature_tracker

./: .gitignore  CMakeLists.txt  build.sh  build_ros.sh
Examples/ROS/ROS_Demo_Feature_Tracking/: CMakeLists.txt  parse_stats.py
Examples/ROS/ROS_Demo_Feature_Tracking/config/: EuRoC.yaml
Examples/ROS/ROS_Demo_Feature_Tracking/launch/: EuRoC.launch
Examples/ROS/ROS_Demo_Feature_Tracking/src/: feature_tracker.cpp
include/: ORBDetectAndDespMatcher.h  ORBextractor.h  gyro_aided_tracker.h
src/: ORBDetectAndDespMatcher.cpp  frame.cpp  gyro_aided_tracker.cpp  patch_match.cpp
